--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "babel-plugin-import": "^1.13.3",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-pager-view": "^5.1.9",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0"
