--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-pager-view": "^5.1.9",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.2.0"
+    "react-native-screens": "^3.2.0",
+    "react-native-swiper": "^1.6.0-rc.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
