--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-swiper": "^1.6.0-rc.3"
   },
   "devDependencies": {
