启动页修改

--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "test": "jest",
     "lint": "eslint .",
     "react-devtools": "react-devtools",
-    "export-jsbundle-ios" : "react-native bundle --entry-file index.js --platform ios --dev false --bundle-output release_ios/main.jsbundle --assets-dest release_ios/"
+    "export-jsbundle-ios": "react-native bundle --entry-file index.js --platform ios --dev false --bundle-output release_ios/main.jsbundle --assets-dest release_ios/"
   },
   "dependencies": {
     "@ant-design/icons-react-native": "^2.2.1",
     "@ant-design/react-native": "^4.1.0",
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
@@ -28,6 +29,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-storage": "^1.0.1",
     "react-native-swiper": "^1.6.0-rc.3"
   },
   "devDependencies": {
